--- a/userguide/ref_ug.bib
+++ b/userguide/ref_ug.bib
@@ -349,4 +349,14 @@
 	address = {New York}
 }
 
+@article {benjamini1997,
+	author = {Benjamini, Y. and Hochberg, Y.},
+	title = {Multiple hypotheses testing with weights},
+	journal = {Scand. J. Stat.},
+	volume = {24},
+	pages = {407--418},
+	year = {1997},
+}
+
+
 
