Fixed a bug in weighted combineTests call.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2048 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -2022,7 +2022,7 @@ weights <- rep(1, length(merged$id))
 freq <- tabulate(merged$id)
 weights[tab.ave$best] <- freq[merged$id[tab.ave$best]] - 1
 weights <- pmax(weights, 1)
-tabcom.w <- combineTests(merged$id, results$table, weights=weights)
+tabcom.w <- combineTests(merged$id, results$table, weight=weights)
 head(tabcom.w)
 @
 
